--- a/examples/jpeg_qnr/README
+++ b/examples/jpeg_qnr/README
@@ -1,5 +1,5 @@
 
-The jpeg_qnr design, based on the ArcticPro2 and ArcticPro3 Family
+The jpeg_qnr design, based on the ArcticPro2 & ArcticPro3 Family
 ==================================================================
 
 This example uses Yosys for synthesis.
